# NovaFund

./: IMPLEMENTATION_GUIDE.md
backend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
backend/modules/portfolio/: portfolio.repository.ts
backend/prisma/: schema.prisma
backend/src/: app.module.ts  user.controller.ts
backend/src/bridge/: bridge.controller.ts  bridge.module.ts  bridge.service.ts
backend/src/config/: env.validation.ts  oracle.config.ts
backend/src/guards/: admin.guard.ts
backend/src/kyc/: kyc-audit.entity.ts  kyc.controller.ts  kyc.module.ts  kyc.service.ts
backend/src/oracle/: oracle.module.ts  price-fetch.task.ts  price-oracle.controller.ts  price-oracle.repository.ts  price-oracle.service.ts
backend/src/sep24/: README.md  anchor.service.spec.ts  anchor.service.ts  sep24.controller.spec.ts  sep24.controller.ts  sep24.module.ts  sep24.service.spec.ts  sep24.service.ts
backend/src/verification/: verification.module.ts
contracts/: Cargo.toml  README.md
contracts/amm-liquidity-pools/: Cargo.toml
contracts/amm-liquidity-pools/src/: lib.rs
contracts/cross-chain-bridge/src/: lib.rs  (+1 more)
contracts/escrow/: IMPLEMENTATION.md
contracts/project-launch/: Cargo.toml  REFUND_IMPLEMENTATION_SUMMARY.md  REFUND_QUICK_REFERENCE.md
contracts/project-launch/src/: lib.rs  test_upgrade.rs
contracts/project-launch/test_snapshots/tests/: test_execute_upgrade_too_early_fails.1.json  test_pause_blocks_create_project_and_contribute.1.json
contracts/shared/: Cargo.toml
frontend/: package-lock.json  package.json  vitest.config.ts
(+115 files in other folders)
